# turtlebot3-self-parking

./: CMakeLists.txt  README.md  package.xml
launch/: turtlebot3_artag_detect.launch  turtlebot3_camera_calibration.launch  turtlebot3_camera_projection.launch  turtlebot3_robot.launch  turtlebot3_selfparking.launch
shared_files/: camera.yaml  camera_640x480_15fps.yaml  projection.yaml
src/: Untitled.ipynb  Untitled1.ipynb  adjust_parking.py  cv_test.py  cvtest.py  debug.py  detect_lane.py  detect_sign.py  hsv.py  lane_follow.py  lanedetection_test.ipynb  manipulation.py
src/.ipynb_checkpoints/: lanedetection_test-checkpoint.ipynb
src/parking_test_image/: Untitled.ipynb  Untitled1.ipynb  lanedetection_test.ipynb  record.txt
src/parking_test_image/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  lanedetection_test-checkpoint.ipynb
src/parking_test_image/modify/: lanedetection_test.ipynb
src/parking_test_image/modify/.ipynb_checkpoints/: lanedetection_test-checkpoint.ipynb
srv/: CallCompressedImage.srv  GetPointLocation.srv
urdf/: turtlebot3_burger_for_autorace.urdf.xacro
