<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_selfparking</name>
  <version>1.1.0</version>
  <description>
    This package shows a simple autonomous task of turtlebot3. With the knowledge of Computer Vision and Machine Learning, the turtlebot3 can recoginize the location of parking slot relative itself roughly. To finish the navigation part accurately, some PID (or PI) controllers are designed to get to a nice position.
  </description>
  <license>Apache 2.0</license>
  <author email="zhichengyu2019@u.northwestern.edu">Zhicheng</author>
  <maintainer email="zhichengyu2019@u.northwestern.edu">Zhicheng</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>actionlib</depend>
  <depend>interactive_markers</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
